# bitmanip

./: .gitignore
src/: CMakeLists.txt  boost_example.cpp
